--- a/sailing/src/main/resources/messages.properties
+++ b/sailing/src/main/resources/messages.properties
@@ -5,7 +5,11 @@ date.format=dd/MM/yyyy
 time.format=HH:mm
 date.time.format=dd/MM/yyyy HH:mm
 currency.symbol=€
-
+######################################################################
+# home.html ##########################################################
+######################################################################
+dialogs.home.trip.group=Group Trips
+dialogs.home.trip.private=Private Trips
 ######################################################################
 # fragments/dialogs.html #############################################
 ######################################################################
@@ -67,7 +71,7 @@ template.navbar.login=Login
 template.navbar.logout=Logout
 
 ######################################################################
-# parts.html #############################################
+# parts.html #########################################################
 ######################################################################
 parts.trip.hour=hour
 parts.trip.hours=hours
@@ -91,8 +95,8 @@ user.role.CLIENT=Client
 
 ######################################################################
 # book_date.html #####################################################
-# book_departure.html #####################################################
-# book_places.html #####################################################
+# book_departure.html ################################################
+# book_places.html ###################################################
 ######################################################################
 book.heading=Booking
 book.price.per.hour={0} \u20AC - {1} {2}
@@ -108,7 +112,7 @@ book.next=Next
 book.book=Book
 
 ######################################################################
-# trips.html ##########################################################
+# trips.html #########################################################
 ######################################################################
 trips.table.head.id=#
 trips.table.head.date=Date
