Finished book/book_date.html, /book/book_departure.html and almost finished /book/book_places.html. Falta que /book/book_places.html asigne bien el places al trip (debe restar lo que el usuario marque en el input a los places), que compruebe si está bien en el @PostMapping("/book/book_save") del TripController, y hacer que el @PostMapping("/book/book_save") guarde el trip.

--- a/sailing/src/main/resources/messages.properties
+++ b/sailing/src/main/resources/messages.properties
@@ -111,7 +111,7 @@ book.places=Places
 book.free.places={0} places free
 book.next=Next
 book.book=Book
-
+book.alert.no.places.free=There aren't any free places at
 ######################################################################
 # trips.html #########################################################
 ######################################################################
