Whole work almost done, añadidas clases al css que dotan a la pagina de una estética de glassmorphism; solo falta validar que cuando reschenduleas la fecha no sea anterior o igual a la orginal del trip.

--- a/sailing/src/main/resources/messages.properties
+++ b/sailing/src/main/resources/messages.properties
@@ -77,6 +77,8 @@ template.navbar.logout=Logout
 parts.trip.hour=hour
 parts.trip.hours=hours
 parts.trip.places=places
+parts.trip.no.trips.user=You have no trips
+parts.trip.no.trips.admin=There aren't any trips
 
 ######################################################################
 # login.html #########################################################
@@ -124,7 +126,7 @@ trips.table.head.type.title=Type
 trips.table.head.type.category=Category
 trips.table.head.status=Status
 trips.table.head.actions=Actions
-	 	 		
+
 ######################################################################
 # user.html ##########################################################
 ######################################################################
